Fixed gap on side of screen

--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -50,7 +50,7 @@ color: #1A5D5F;
   flex-flow: row;
   justify-content: bottom;
   align-items: end;
-  width: 75%;
+  width: 80%;
   height: 24vw;
 }
 
